  - Fix bug causing full refresh of guide data during startup if there are 'Unknown' channels in the lineup
  - Fix bug causing the static PVR connection string 'api.hdhomerun.com' to not appear in the Kodi 'PVR info' overlay
  - Add reporting of Live TV tuner signal status information
  - Add new "Disable reporting of active Live TV tuner signal status" Interface option

v4.5.2 (2021.05.27)
  - Update SQLite database engine to version 3.35.5
  - Update cURL library to version 7.77.0
  - Prevent recording rule padding values from exceeding specified limits (1 hour for start padding, 3 hours for end padding)
  - Fix bug that incorrectly set recording rule padding values to 30 seconds instead of zero seconds when specified as "0 min" in Kodi
  - Fix "Unable to resolve timer type" errors reported in Kodi log when adding recording rules due to missing timer capabilities flag
  - Apply channel logo image associated with a recording as the icon for that recording when available

v4.5.1 (2021.04.09)
  - Update SQLite database engine to version 3.35.4
  - Update cURL library to version 7.76.0
  - Fix bug preventing timer rules assigned a specific channel number to be changed back to 'Any channel'
  - Change how start and end times are reported for Record series timer rules so they show as 'Any day at any time'
  - Apply workaround for Kodi error 'In order to add/update a timer the end date and time...' when editing a Record series rule

v4.5.0 (2021.03.16)
  - Update SQLite database engine to version 3.35.1
  - Update cURL library to version 7.75.0
  - Fix bug that could cause unnecessary triggering of both channel and channel group updates
  - Fix race condition that could cause a "Database is locked" error to be logged during Kodi startup
  - Fix bug preventing Electronic Program Guide (EPG) data from updating when Kodi Guide 'Future days to display' setting has changed