@@ -5,6 +5,7 @@ v4.6.0 (2021.08.xx)
   - Fix bug causing the static PVR connection string 'api.hdhomerun.com' to not appear in the Kodi 'PVR info' overlay
   - Add reporting of Live TV tuner signal status information
   - Add new "Disable reporting of active Live TV tuner signal status" Interface option
+  - Remove defunct 'Demo Channels' channel group
 
 v4.5.2 (2021.05.27)
   - Update SQLite database engine to version 3.35.5
